# convolution_2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: conv2d.h
src/: conv2d.c  main.c
